--- a/view/commons/header.html
+++ b/view/commons/header.html
@@ -35,6 +35,11 @@
     border-left-style: none;
     border-left-color: rgb(255,255,255);
     }
+
+    #_card.card{
+        border: none;
+    }
+
     </style>
 </head>
 
