--- a/view/login/regi.html
+++ b/view/login/regi.html
@@ -35,7 +35,7 @@
 
         <div class="row" style="min-width: auto;text-align: left;font-family: 'Noto Sans KR', sans-serif;margin-bottom: -15px;">
             <div class="col" style="text-align: center;padding: 0px;"><label style="font-family: 'Noto Sans KR', sans-serif;margin-right: 127px;margin-left: -145px;"><strong>비밀번호</strong></label>
-                <div style="text-align: center;margin: 0px;margin-bottom: 23px;"><input id="pwd" type="password" style="width: 330px;height: 40px;" placeholder=" 비밀번호 영문, 숫자 또는 혼합 6~20자"></div>
+                <div style="text-align: center;margin: 0px;margin-bottom: 23px;"><input id="pwd" type="password" style="width: 330px;height: 40px;" placeholder=" 비밀번호 영문, 숫자 혼합 6~20자"></div>
             </div>
         </div>
         <div class="row">
