--- a/view/community/cardDetail.html
+++ b/view/community/cardDetail.html
@@ -791,27 +791,32 @@
     
     // 자기 댓글 삭제하기
     function deleteCardReview(cardRevSeq) {
-                
-        $.ajax({
-            url: "http://192.168.0.231:3000/cardReviewDelete",
-            type: "post",
-            data: {
-                "cardRevSeq": cardRevSeq
-            },
-            success: function (data) {
-                if (data == "suc") {
-                    getCardReviewList(0);
-                    getCardReviewCount();
-                }
-                else {
-                    alert("삭제 실패");
-                }
+        
+        if(confirm("정말 삭제하시겠습니까?") == true) {
+            $.ajax({
+                url: "http://192.168.0.231:3000/cardReviewDelete",
+                type: "post",
+                data: {
+                    "cardRevSeq": cardRevSeq
+                },
+                success: function (data) {
+                    if (data == "suc") {
+                        getCardReviewList(0);
+                        getCardReviewCount();
+                    }
+                    else {
+                        alert("삭제 실패");
+                    }
 
-            },
-            error: function () {
-                alert("deleteCardReview() error");
-            }
-        });
+                },
+                error: function () {
+                    alert("deleteCardReview() error");
+                }
+            });
+        } else {
+            return;
+        }
+        
 
         
     }
