--- a/view/store/order.html
+++ b/view/store/order.html
@@ -6,10 +6,14 @@
 
 <link rel="shortcut icon" href="../../assets/img/wanza-Icon.ico" type="image/x-icon"> <!-- 브라우저 탭 아이콘 -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> <!-- 폰트어썸아이콘 -->
-<link rel="stylesheet" type="text/css" href="../../assets/bootstrap/css/bootstrap.min.css"> <!-- 부트스트랩 -->
+<!-- <link rel="stylesheet" type="text/css" href="../../assets/bootstrap/css/bootstrap.min.css"> -->
+ <!-- 부트스트랩 -->
 <link rel="stylesheet" type="text/css" href="../../css/style.css"> <!-- 공통-->
 
 <style>
+#order .row{
+    margin: 20px 0;
+}
 /* 왼쪽 주문정보 창 */
 #order{
     font-size: 12pt;
@@ -100,19 +104,22 @@ select::-ms-expand{
 
 
 /* 배송지 탭 */
-.nav-tabs .nav-link{
+#order .nav-tabs{
+    margin: 40px 0;
+}
+#order .nav-tabs .nav-link{
     border: none;
     margin-bottom: 0;
 }
-.nav-link.active+.nav-line,
-.nav-link.active{
+#order .nav-link.active+.nav-line,
+#order .nav-link.active{
     font-weight: bold;
     color: #212529;
     border-bottom: solid #f4744c;
     width: 100%;
     margin-bottom: -2px;
 }
-.nav-tabs a{
+#order .nav-tabs a{
     color: #212529;
 }
 /* 배송지 */
@@ -130,7 +137,7 @@ select::-ms-expand{
     align-items: flex-start;
     padding-top: 8px;
 }
-.dlvy1 label{height: 39.5px;}
+/* .dlvy1 label{height: 39.5px;} */
 .dlvy1 select,
 .dlvy1 input{
     height: 39px;
@@ -166,8 +173,8 @@ select::-ms-expand{
 .textlimit{
     position: relative;
     color: #dbdbdb;
-    left: 263px;
-    bottom: 30px;
+    left: 266px;
+    bottom: 20px;
     height: 0;
 }
 
@@ -229,9 +236,10 @@ select::-ms-expand{
     justify-content: center;
     align-items: center;
 }
+.pay_use:active,
 .pay_use:hover{
-    /* text-shadow: none;
-    color: #f4744c; */
+    border: solid #f4744c;
+    border-radius: 4px;
 }
 
 
@@ -249,7 +257,7 @@ select::-ms-expand{
 .payment1{
     border-bottom: solid #dbdbdb;
 }
-.payment1_0{
+#payment .payment1_0{
     margin: 20px 10px;
     justify-content: space-between;
 }
@@ -266,26 +274,26 @@ select::-ms-expand{
 }
 
 /* 망할 체크박스 색 바꾸기 */
-.custom-checkbox{
+#payment .custom-checkbox{
     margin-left: 30px;
 }
-.custom-control-label::before,
-.custom-control-label::after{
+#payment .custom-control-label::before,
+#payment .custom-control-label::after{
     top: 0rem; left: -1.8rem;
     width: 1.3rem; height: 1.3rem;
 }
-.custom-control-input:checked~.custom-control-label::before {
+#payment .custom-control-input:checked~.custom-control-label::before {
     color: #fff;
     border-color: #f4744c;
     background-color: #f4744c;
 }
-.custom-control-input:focus~.custom-control-label::before {
+#payment .custom-control-input:focus~.custom-control-label::before {
     box-shadow: none;   /* 0 0 0 .2rem rgba(0,123,255,.25) */
 }
-.custom-control-input:focus:not(:checked)~.custom-control-label::before {
+#payment .custom-control-input:focus:not(:checked)~.custom-control-label::before {
     border-color: #adb5bd
 }
-.custom-control-input:not(:disabled):active~.custom-control-label::before {
+#payment .custom-control-input:not(:disabled):active~.custom-control-label::before {
     color: #fff;
     background-color: #ffe4db;
     border-color: #ffe4db;
@@ -321,12 +329,11 @@ select::-ms-expand{
 
 </head>
 <body>
-    <!-- <header include-html="../commons/header.html"></header>
-    <nav include-html="../commons/menuComm.html"></nav> -->
+    <header include-html="../commons/header.html"></header>
+    <nav include-html="../commons/menuComm.html"></nav>
     
     <div class="container mt-5">
         <div class="row" style="height: 100%;">
-            
             <div class="col-md-8" id="order">
                 <div class="order_title_head"><h1>주문결제</h1></div>
 
@@ -469,21 +476,25 @@ select::-ms-expand{
 
                 <div class="mb-5">
                     <div class="order_title"><span>결제수단</span></div>
-                    <div>
-                        <div class="row order_content_wrap">
-                            <div class="order_subtitle">결제</div>
-                            <div class="order_content"><label for="_name"><input type="text" id="_name" value=""></label></div>
+
+                    <div class="pay_use_wrap">
+                        <div class="pay_use">
+                            <input type="hidden" id="pay_card" name="pay" value="card">
+                            <label for="pay_card"><i class="far fa-credit-card fa-5x"></i></label>
                         </div>
-                        <div class="pay_use_wrap">
-                            <div class="pay_use"><i class="far fa-credit-card fa-5x"></i></div>
-                            <div class="pay_use"><i class="fas fa-won-sign fa-5x"></i></div>
-                            <div class="pay_use"><i class="fas fa-mobile-alt fa-5x"></i></div>
+                        <div class="pay_use">
+                            <input type="hidden" id="pay_cash" name="pay" value="trans">
+                            <label for="pay_cash"><i class="fas fa-won-sign fa-5x"></i></label>
+                        </div>
+                        <div class="pay_use">
+                            <input type="hidden" id="pay_mobile" name="pay" value="phone">
+                            <label for="pay_mobile"><i class="fas fa-mobile-alt fa-5x"></i></label>
                         </div>
                     </div>
                 </div>
             
             
-            </div>
+            </div> <!-- 왼쪽 부분 끝 -->
             
             <div class="col-md-4 p-1" id="payment">
                 <div class="payment_wrap">
@@ -506,7 +517,7 @@ select::-ms-expand{
 
                     </div>
 
-                    <button class="payment_btn" type="button" >4,1400원 결제하기</button>
+                    <button class="payment_btn" type="button" >41,400원 결제하기</button>
 
                 </div>
             </div>
@@ -514,7 +525,7 @@ select::-ms-expand{
         </div>
     </div>
 
-    <!-- <footer include-html="../commons/footer.html"></footer> -->
+    <footer include-html="../commons/footer.html"></footer>
 
 </body>
 
@@ -522,17 +533,19 @@ select::-ms-expand{
 <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="../../js/includeHTML.js"></script>
 <script src="../../js/header.js"></script>
+<!-- iamport.payment.js -->
+<script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
 
 <script>
-let element = document.getElementById('order');
+let element = document.getElementById('order'); //왼쪽 창 높이 구하기
 let h = element.clientHeight;
 console.log("높이 : "+h)
 
-let element1 = document.getElementById('payment');
+let element1 = document.getElementById('payment'); //오른쪽 결제 창 높이 설정하여 유동적 고정 적용
 element.clientHeight = h;
 
 $(document).ready(function() {
-    $('#_dlvy_req3').hide();
+    $('#_dlvy_req3').hide(); //배송요청사항 직접입력 숨기기/펼치기
     $("#_dlvy_req1").change(function(){
         let s = $('#_dlvy_req1 option:selected').val();
         if(s==4){
@@ -542,18 +555,122 @@ $(document).ready(function() {
             $('#_dlvy_req3').hide();
         }
     });
-    
-    
-    
 
-    
-    
-
-    $('.point_btn').click( function() {
+    $('.point_btn').click( function() { //포인트 전액사용 토글
         $(this).toggleClass('active');
     });
+    
+    let method = ''
+    $('.pay_use').click( function() { //결제수단 값
+        method = $(this).children('input[type="hidden"]').val();
+        console.log(method)
+    });
+
+    $('.payment_btn').click(function(){ //결제
+        console.log('결제')
+        if(method==''){
+            alert('결제수단을 선택해주세요')
+        }else{
+            requestPay(method);
+        }
+    })
+
+    
+
 });
 
+// 아임포트 결제
+function requestPay(method) {
+    var IMP = window.IMP; // 생략가능
+    IMP.init("imp15128186"); // 가맹점 식별코드
+
+    // IMP.request_pay(param, callback) 호출
+    IMP.request_pay({ // param
+        pg: "kakaopay",
+        //pg: "kcp",
+        pay_method: method, //pay_method: "card", pay_method: "trans",
+        //merchant_uid: "ORD20180131-0000011",
+        name: "노르웨이 회전 의자",
+        amount: 100,
+        buyer_email: "gildong@gmail.com",
+        buyer_name: "홍길동",
+        buyer_tel: "010-5458-8131",
+        buyer_addr: "서울특별시 강남구 신사동",
+        buyer_postcode: "01181"
+    }, function (rsp) { // callback
+        console.log(rsp)
+        console.log(rsp.success)
+        console.log(rsp.imp_uid)
+        console.log(rsp.merchant_uid)
+
+        if (rsp.success) {
+            // jQuery로 HTTP 요청
+            jQuery.ajax({
+                url: "https://www.myservice.com/payments/complete", // 가맹점 서버
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                data: {
+                    imp_uid: rsp.imp_uid, //거래 고유 번호
+                    merchant_uid: rsp.merchant_uid //가맹점에서 관리하는 주문번호
+                }
+            })
+            /*
+            .done(function (data) {
+                console.log(data)
+                console.log(data.status)
+                
+                // 가맹점 서버 결제 API 성공시 로직
+                switch(data.status) {
+                    case "vbankIssued":
+                    // 가상계좌 발급 시 로직
+                        console.log('가상계좌 발급 시 로직')
+                    break;
+                    case "success":
+                    // 결제 성공 시 로직
+                        console.log('결제 성공 시 로직')
+                    break;
+                }
+            })
+            */
+        } else {
+            alert("결제에 실패하였습니다. 에러 내용: " +  rsp.error_msg);
+        }
+    });
+}
+
+/*
+app.use(bodyParser.json());
+  
+// "/payments/complete"에 대한 POST 요청을 처리
+app.post("/payments/complete", async (req, res) => {
+    try {
+        const { imp_uid, merchant_uid } = req.body; // req의 body에서 imp_uid, merchant_uid 추출
+        
+        // 액세스 토큰(access token) 발급 받기
+        const getToken = await axios({
+        url: "https://api.iamport.kr/users/getToken",
+        method: "post", // POST method
+        headers: { "Content-Type": "application/json" }, // "Content-Type": "application/json"
+        data: {
+            imp_key: "3046941560063767", // REST API키
+            imp_secret: "I7HkHr84szKn1UTH0VnoHZ7Txg8moZ166IrN9zRC9CZawTRxOfWve3pMkx8Iw9PCShq2QiE0UDarw1Yl" // REST API Secret
+        }
+        });
+        const { access_token } = getToken.data.response; // 인증 토큰
+        
+        // imp_uid로 아임포트 서버에서 결제 정보 조회
+        const getPaymentData = await axios({
+            url: 'https://api.iamport.kr/payments/${imp_uid}', // imp_uid 전달
+            method: "get", // GET method
+            headers: { "Authorization": access_token } // 인증 토큰 Authorization header에 추가
+        });
+        const paymentData = getPaymentData.data.response; // 조회한 결제 정보
+        
+    } catch (e) {
+        res.status(400).send(e);
+    }
+});
+*/
 </script>
 
 </html>
