--- a/view/store/order.html
+++ b/view/store/order.html
@@ -229,18 +229,36 @@ select::-ms-expand{
     color: #f4744c;
 }
 .pay_use{
-    width: 100px;
-    height: 100px;
-    margin: 20px;
+    width: 90px;
+    height: 90px;
+    margin: 0 20px 0 0;
     display: inherit;
     justify-content: center;
     align-items: center;
+    border: solid 1px;
+    border-radius: 7px;
 }
-.pay_use:active,
-.pay_use:hover{
-    border: solid #f4744c;
-    border-radius: 4px;
+.pay_use label{
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    line-height: 8;
 }
+.pay_use input{
+    visibility: hidden;
+    width: 0;
+}
+.pay_use label:hover{
+    background-color: #fdf2f0;
+    border-radius: 7px;
+}
+.pay_use label.active{
+    color: white;
+    border: none;
+    background-color: #f4744c;
+}
+
 
 
 /* 오른쪽 결제 창 */
@@ -335,6 +353,7 @@ select::-ms-expand{
     <div class="container mt-5">
         <div class="row" style="height: 100%;">
             <div class="col-md-8" id="order">
+                <form action="" id="form_order">
                 <div class="order_title_head"><h1>주문결제</h1></div>
 
                 <div class="mb-5">
@@ -342,19 +361,19 @@ select::-ms-expand{
                     <div>
                         <div class="row order_content_wrap">
                             <div class="order_subtitle">이름</div>
-                            <div class="order_content"><label for="_name"><input type="text" id="_name" value=""></label></div>
+                            <div class="order_content"><label for="_name"><input type="text" id="_name" name="name" value=""></label></div>
                         </div>
                         <div class="row order_content_wrap">
                             <div class="order_subtitle">연락처</div>
                             <div class="order_content order_phone1"><label for="_phone1">
-                                <select name="" id="_phone1">
+                                <select name="phone1" id="_phone1">
                                     <option value="010">010</option>
                                     <option value="011">011</option>
                                     <option value="016">016</option>
                                     <option value="018">018</option>
                                     <option value="070">070</option>
                                 </select></label><i class="fas fa-sort"></i></div>
-                            <div class="order_content order_phone2"><label for="_phone2"><input type="text" id="_phone2" value=""></label></div>
+                            <div class="order_content order_phone2"><label for="_phone2"><input type="text" id="_phone2" name="phone2" value=""></label></div>
                         </div>
                         <div class="row order_content_wrap">
                             <div class="order_subtitle">이메일</div>
@@ -362,8 +381,8 @@ select::-ms-expand{
                             <span>@</span>
                             <div class="order_content order_email2"><label for="_email2">
                                 <select name="email2" id="_email2">
-                                    <option value="naver">naver.com</option>
-                                    <option value="daum">daum.com</option>
+                                    <option value="naver.com">naver.com</option>
+                                    <option value="daum.com">daum.com</option>
                                 </select></label><i class="fas fa-sort"></i></label></div>
                         </div>
                     </div>
@@ -397,24 +416,24 @@ select::-ms-expand{
                             <div class="row order_content_wrap dlvy">
                                 <div class="order_subtitle">주소</div>
                                 <div class="order_content dlvy_address">
-                                    <label for="_dlvy_address1"><input type="text" id="_dlvy_address1" value=""></label>
-                                    <label for="_dlvy_address2"><input type="text" id="_dlvy_address2" value=""></label>
+                                    <label for="_dlvy_address1"><input type="text" id="_dlvy_address1" name="dlvy_address1" value=""></label>
+                                    <label for="_dlvy_address2"><input type="text" id="_dlvy_address2" name="dlvy_address2" value=""></label>
                                 </div>
                             </div>
                             <div class="row order_content_wrap">
                                 <div class="order_subtitle">받는사람</div>
-                                <div class="order_content"><label for="_name"><input type="text" id="_name" value=""></label></div>
+                                <div class="order_content"><label for="_name"><input type="text" id="_rname" name="rname" value=""></label></div>
                             </div>
                             <div class="row order_content_wrap">
                                 <div class="order_subtitle">연락처</div>
-                                <div class="order_content"><label for="_name"><input type="text" id="_name" value=""></label></div>
+                                <div class="order_content"><label for="_name"><input type="text" id="_name" name="rphone" value=""></label></div>
                             </div>
                             <div class="row order_content_wrap dlvy1">
                                 <div class="order_subtitle">요청사항</div>
                                 <div class="order_content dlvy_req">
                                     <div id="_dlvy_req3">
                                         <label for="_dlvy_req2">
-                                        <input type="text" id="_dlvy_req2" placeholder="배송요청사항을 입력해주세요" value="">
+                                        <input type="text" id="_dlvy_req2" name="dlvy_req" placeholder="배송요청사항을 입력해주세요" value="">
                                         <div class="textlimit">0<span>/50</span></div></label>
                                     </div>
                                     <label class="dlvy_req1" for="_dlvy_req1"><select name="dlvy_req" id="_dlvy_req1">
@@ -430,6 +449,7 @@ select::-ms-expand{
                         </div> <!--배송지 선택 끝-->
                         <!-- 신규배송지 -->
                         <div class="tab-pane" id="dlvy_new">
+                            <form action="" id="form_new_dlvy">
                             <div class="row order_content_wrap">
                                 <div class="order_subtitle">배송지 이름</div>
                                 <div class="order_content"><label for="_name"><input type="text" id="_name" value=""></label></div>
@@ -450,6 +470,7 @@ select::-ms-expand{
                                 <div class="order_content"><label for="_name"><input type="text" id="_name" value=""></label></div>
                             </div>
                             <button class="dlvy_btn" type="button">저 장</button>
+                            </form>
                         </div>
                     </div> <!--탭 컨탠츠 끝-->
                 </div>
@@ -465,7 +486,7 @@ select::-ms-expand{
                 <div class="mb-5" id="point" >
                     <div class="order_title"><span>포인트</span></div>
                     <div class="row order_content_wrap">
-                        <div class="order_content point_box"><label for="_point"><input type="text" id="_point" value=""></label></div>
+                        <div class="order_content point_box"><label for="_point"><input type="text" id="_point" name="point" value=""></label></div>
                         <div><button class="point_btn" type="button">전액사용</button></div>
                     </div>
                     <div class="row order_content_wrap">
@@ -479,20 +500,20 @@ select::-ms-expand{
 
                     <div class="pay_use_wrap">
                         <div class="pay_use">
-                            <input type="hidden" id="pay_card" name="pay" value="card">
-                            <label for="pay_card"><i class="far fa-credit-card fa-5x"></i></label>
+                            <label for="pay_card"><i class="far fa-credit-card fa-4x"></i></label>
+                            <input type="radio" id="pay_card" name="pay" value="card">
                         </div>
                         <div class="pay_use">
-                            <input type="hidden" id="pay_cash" name="pay" value="trans">
-                            <label for="pay_cash"><i class="fas fa-won-sign fa-5x"></i></label>
+                            <label for="pay_cash"><i class="fas fa-won-sign fa-4x"></i></label>
+                            <input type="radio" id="pay_cash" name="pay" value="trans">
                         </div>
                         <div class="pay_use">
-                            <input type="hidden" id="pay_mobile" name="pay" value="phone">
-                            <label for="pay_mobile"><i class="fas fa-mobile-alt fa-5x"></i></label>
+                            <label for="pay_mobile" class=""><i class="fas fa-mobile-alt fa-4x"></i></label>
+                            <input type="radio" id="pay_mobile" name="pay" value="phone">
                         </div>
                     </div>
                 </div>
-            
+                </form>
             
             </div> <!-- 왼쪽 부분 끝 -->
             
@@ -561,40 +582,66 @@ $(document).ready(function() {
     });
     
     let method = ''
+    
+    //$('.pay_use').remove('active');
+    
     $('.pay_use').click( function() { //결제수단 값
+        //$(this).toggleClass('active');
+        if($(this).children('input:radio[name="pay"]').is(':checked')){
+            console.log($(this).children().html())
+            
+            $('label').toggleClass('active');
+        }
+
         method = $(this).children('input[type="hidden"]').val();
-        console.log(method)
+        //console.log(method)
     });
 
-    $('.payment_btn').click(function(){ //결제
-        console.log('결제')
+    $('.payment_btn').click(function(){ //결제버튼
+        let formorder1 =  decodeURIComponent($('#form_order').serialize());
+        let formorder = formorder1.split('&');
+        
+        //모든 데이터 json형태로
+        let fdata = '{'
+        formorder.forEach(e => {
+            let j = e.split('=');
+            fdata += '"'+j[0]+'":"'
+            fdata += j[1]+'",'
+        });
+        fdata = fdata.slice(0,-1)
+        fdata += '}';
+        let jdata = JSON.parse(fdata)
+
         if(method==''){
             alert('결제수단을 선택해주세요')
         }else{
-            requestPay(method);
+            requestPay(method,jdata); //아임포트 결제 실행
         }
     })
-
     
-
+    $('.dlvy_btn').click(function(){ //배송지 저장 버튼
+        let new_dlvy = $('#form_new_dlvy').serialize()
+        
+    });
 });
 
 // 아임포트 결제
-function requestPay(method) {
+function requestPay(method,data) {
+    console.log(data.name)
+    
     var IMP = window.IMP; // 생략가능
     IMP.init("imp15128186"); // 가맹점 식별코드
 
     // IMP.request_pay(param, callback) 호출
     IMP.request_pay({ // param
-        pg: "kakaopay",
-        //pg: "kcp",
-        pay_method: method, //pay_method: "card", pay_method: "trans",
+        pg: "html5_inicis",
+        pay_method: method,
         //merchant_uid: "ORD20180131-0000011",
-        name: "노르웨이 회전 의자",
+        name: data.name,
         amount: 100,
         buyer_email: "gildong@gmail.com",
-        buyer_name: "홍길동",
-        buyer_tel: "010-5458-8131",
+        buyer_name: "",
+        buyer_tel: "",
         buyer_addr: "서울특별시 강남구 신사동",
         buyer_postcode: "01181"
     }, function (rsp) { // callback
