--- a/view/community/mainCommunity.html
+++ b/view/community/mainCommunity.html
@@ -226,7 +226,7 @@
 
                         app += '<div style="width: 350px; height: 400px;">'
                             +  '<article article class="project2_wrap" >'
-                            +  '<a href="./storeDetail.html?seq=' + val.productSeq + '"></a>'
+                            +  '<a href="../store/storeDetail.html?seq=' + val.productSeq + '"></a>'
                             +  '<div class="project2_item">'
                             +  '<span></span>'
                             +  '<img src="http://localhost:3000/upload/' + val.productFileName + '" alt="">'
