--- a/view/commons/menuComm.html
+++ b/view/commons/menuComm.html
@@ -10,9 +10,9 @@
                         style="color: rgb(0,0,0);font-size: 19px;margin-right: 20px;">인기글</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" style="color: rgb(0,0,0);margin-right: 21px;">스토리</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#"
+                <li class="nav-item"><a class="nav-link" href="../community/questions.html"
                         style="color: rgb(0,0,0);font-size: 19px;margin-right: 20px;">질문과답변</a></li>
-                <li class="nav-item"><a class="nav-link" href="#"
+                <li class="nav-item"><a class="nav-link" href="../community/event.html"
                         style="color: rgb(0,0,0);font-size: 19px;margin-right: 190px;">이벤트</a></li>
             </ul>
         </div>
