--- a/view/community/questions.html
+++ b/view/community/questions.html
@@ -64,8 +64,8 @@
     }
 
     #body,#body p, #body b,#body h1, #body h2, #body h3, #body h5,#body h6, #body li{
-        font-family: 'Nanum Gothic';
-        font-weight: bold;
+      font-family: 'Nanum Gothic', sans-serif;
+        /* font-weight: bold; */
     }
     
 
