--- a/view/store/cart.html
+++ b/view/store/cart.html
@@ -124,8 +124,8 @@
     }
 
     #body,#body p, #body b,#body h1, #body h3, #body h5,#body h6{
-        font-family: 'Nanum Gothic';
-        font-weight: bold;
+        font-family: 'Nanum Gothic', sans-serif;
+        /* font-weight: bold; */
     }
 
 
